# perfmeasure

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: expected-rust.json  expected.json  harness.py  heldout.py  labels-rust.json  labels.json  run_eval.py  wild-baseline.json  wild.json  wild.py
evals/corpus/: hints_and_unions.py  methods_and_instances.py  probed_and_tricky.py  realistic_patterns.py  receivers_scaled.py  typed_basics.py
evals/corpus_rust/: Cargo.toml
evals/corpus_rust/src/: lib.rs
evals/heldout/: corpus_heldout.py  expected-heldout.json  results-v1.txt
src/perf_lint/: adjudicate.py  analysis.py  cli.py  config.py  gitdiff.py  ir.py  report.py
src/perf_lint/adapters/: __init__.py  base.py  python.py  rust.py
src/perf_lint/costs/: __init__.py  python.toml  rust.toml
src/perfmeasure/: cli.py  llm.py  protocol.py  session.py
src/perfmeasure/core/: diff.py  fitting.py  ladder.py  model.py  orchestrator.py  planner.py  probing.py  report.py  scan.py
src/perfmeasure/languages/: base.py
src/perfmeasure/languages/python/: plugin.py
src/perfmeasure/languages/python/runner_files/: runner.py
src/perfmeasure/languages/rust/: discover.py  harness_gen.py  plugin.py
src/perfmeasure/languages/rust/harness_template/: main_template.rs
tests/: test_adjudicate.py  test_analysis.py  test_cli.py  test_diff.py  test_evals_infra.py  test_fitting.py  test_m2_logic.py  test_p0_regressions.py  test_planner.py  test_protocol.py  test_review_regressions.py  test_runner_conformance.py  test_rust.py  test_rust_conformance.py  test_rust_discovery.py  test_session_policy.py  test_tag_parity.py
tests/fixtures/: benign_grid.py  quadratic_same_list.py  random.py  sample_target.py
tests/fixtures/tiny_crate/: Cargo.toml
tests/fixtures/tiny_crate/src/: lib.rs
