[project]
name = "perfmeasure"
version = "0.1.0"
description = "Empirical complexity measurement: runs functions at growing input sizes and curve-fits time and space to Big-O classes"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
perfmeasure = "perfmeasure.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perfmeasure"]
